Réorganisation des imports dans plusieurs fichiers, amélioration de la lisibilité du code avec des ajustements de formatage, et mise à jour des méthodes pour utiliser des enregistrements dans les classes pertinentes. Ajout de vérifications et de gestion des exceptions pour une meilleure robustesse.