@@ -1,17 +1,17 @@
 package fr.prisontycoon.gui;
 
 import fr.prisontycoon.PrisonTycoon;
-import fr.prisontycoon.pets.PetService.PetData;
 import fr.prisontycoon.pets.PetDefinition;
 import fr.prisontycoon.pets.PetRarity;
 import fr.prisontycoon.pets.PetRegistry;
+import fr.prisontycoon.pets.PetService.PetData;
 import org.bukkit.Material;
+import org.bukkit.NamespacedKey;
 import org.bukkit.Sound;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
-import org.bukkit.NamespacedKey;
 import org.bukkit.persistence.PersistentDataType;
 
 import java.util.*;
@@ -27,44 +27,44 @@ import java.util.stream.Collectors;
  */
 public class PetsMenuGUI {
 
-    private final PrisonTycoon plugin;
-    private final NamespacedKey PET_ID_KEY;
-    
     // Synergies définies
     private static final Map<String, SynergyInfo> SYNERGIES = new HashMap<>();
-    
+
     static {
         SYNERGIES.put("commerce", new SynergyInfo(
-            "Synergie Commerce", 
-            "§6✦ Commerce", 
-            Arrays.asList("fenrir", "licorne", "griffon"),
-            "§6+0.20% Sell §7et §6+0.25% Tokens §7par croissance totale"
+                "Synergie Commerce",
+                "§6✦ Commerce",
+                Arrays.asList("fenrir", "licorne", "griffon"),
+                "§6+0.20% Sell §7et §6+0.25% Tokens §7par croissance totale"
         ));
         SYNERGIES.put("savoirs", new SynergyInfo(
-            "Synergie Savoirs", 
-            "§b✦ Savoirs", 
-            Arrays.asList("sphinx", "hippogriffe", "kelpie"),
-            "§b+0.25% Pet XP §7et §b+0.20% XP Joueur §7par croissance totale"
+                "Synergie Savoirs",
+                "§b✦ Savoirs",
+                Arrays.asList("sphinx", "hippogriffe", "kelpie"),
+                "§b+0.25% Pet XP §7et §b+0.20% XP Joueur §7par croissance totale"
         ));
         SYNERGIES.put("machineries", new SynergyInfo(
-            "Synergie Machineries", 
-            "§8✦ Machineries", 
-            Arrays.asList("tarasque_royale", "tarasque", "blackshuck"),
-            "§8+0.25% Efficacité autominer §7et §8-0.05% Usure pioche §7par croissance totale"
+                "Synergie Machineries",
+                "§8✦ Machineries",
+                Arrays.asList("tarasque_royale", "tarasque", "blackshuck"),
+                "§8+0.25% Efficacité autominer §7et §8-0.05% Usure pioche §7par croissance totale"
         ));
         SYNERGIES.put("richesses", new SynergyInfo(
-            "Synergie Richesses", 
-            "§2✦ Richesses", 
-            Arrays.asList("basilic", "vouivre", "kraken"),
-            "§2+0.20% Gain avant-poste §7et §2+0.10% Beacons §7par croissance totale"
+                "Synergie Richesses",
+                "§2✦ Richesses",
+                Arrays.asList("basilic", "vouivre", "kraken"),
+                "§2+0.20% Gain avant-poste §7et §2+0.10% Beacons §7par croissance totale"
         ));
         SYNERGIES.put("opportunites", new SynergyInfo(
-            "Synergie Opportunités", 
-            "§d✦ Opportunités", 
-            Arrays.asList("morrigan", "cernunnos", "farfadet_r"),
-            "§d+0.05% Proc enchants §7et §d+0.15% Chance clés §7par croissance totale"
+                "Synergie Opportunités",
+                "§d✦ Opportunités",
+                Arrays.asList("morrigan", "cernunnos", "farfadet_r"),
+                "§d+0.05% Proc enchants §7et §d+0.15% Chance clés §7par croissance totale"
         ));
     }
+
+    private final PrisonTycoon plugin;
+    private final NamespacedKey PET_ID_KEY;
 
     public PetsMenuGUI(PrisonTycoon plugin) {
         this.plugin = plugin;
@@ -73,25 +73,25 @@ public class PetsMenuGUI {
 
     public void openPetsMenu(Player player) {
         Inventory gui = plugin.getGUIManager().createInventory(54, "§6🐾 §lMes Compagnons");
-        
+
         // Remplir les bordures
         fillBorders(gui);
-        
+
         // Obtenir les pets du joueur
         Map<String, PetData> playerPets = plugin.getPetService().getPlayerPets(player.getUniqueId());
-        
+
         // Créer la section équipe (slots 10, 11, 12)
         createTeamSection(gui, player, playerPets);
-        
+
         // Créer la section collection (pets possédés triés par croissance)
         createCollectionSection(gui, player, playerPets);
-        
+
         // Ajouter les synergies si présentes
         addSynergiesIfActive(gui, player, playerPets);
-        
+
         // Boutons de navigation
         addNavigationButtons(gui);
-        
+
         // Statistiques générales
         addStatsSection(gui, playerPets);
 
@@ -104,8 +104,8 @@ public class PetsMenuGUI {
         // Slots d'équipe
         int[] teamSlots = {3, 5, 7};
         List<PetData> equippedPets = playerPets.values().stream()
-            .filter(pd -> pd.equipped)
-            .collect(Collectors.toList());
+                .filter(pd -> pd.equipped)
+                .collect(Collectors.toList());
 
         for (int i = 0; i < teamSlots.length; i++) {
             if (i < getUnlockedSlots(player)) {
@@ -123,8 +123,8 @@ public class PetsMenuGUI {
                     ItemMeta meta = emptySlot.getItemMeta();
                     plugin.getGUIManager().applyName(meta, "§a✓ Slot libre §f#" + (i + 1));
                     plugin.getGUIManager().applyLore(meta, Arrays.asList(
-                        "§7Équipez un compagnon pour remplir ce slot",
-                        "§7Les compagnons équipés vous donnent leurs bonus"
+                            "§7Équipez un compagnon pour remplir ce slot",
+                            "§7Les compagnons équipés vous donnent leurs bonus"
                     ));
                     emptySlot.setItemMeta(meta);
                     gui.setItem(teamSlots[i], emptySlot);
@@ -135,8 +135,8 @@ public class PetsMenuGUI {
                 ItemMeta meta = lockedSlot.getItemMeta();
                 plugin.getGUIManager().applyName(meta, "§c✖ Slot verrouillé §f#" + (i + 1));
                 plugin.getGUIManager().applyLore(meta, Arrays.asList(
-                    "§8Se débloquera via les quêtes",
-                    "§8Progression future du serveur"
+                        "§8Se débloquera via les quêtes",
+                        "§8Progression future du serveur"
                 ));
                 lockedSlot.setItemMeta(meta);
                 gui.setItem(teamSlots[i], lockedSlot);
@@ -151,8 +151,8 @@ public class PetsMenuGUI {
             ItemMeta meta = noPets.getItemMeta();
             plugin.getGUIManager().applyName(meta, "§c✖ Aucun compagnon");
             plugin.getGUIManager().applyLore(meta, Arrays.asList(
-                "§7Vous ne possédez aucun compagnon pour le moment",
-                "§7Ouvrez des §eboîtes de compagnons §7pour en obtenir !"
+                    "§7Vous ne possédez aucun compagnon pour le moment",
+                    "§7Ouvrez des §eboîtes de compagnons §7pour en obtenir !"
             ));
             noPets.setItemMeta(meta);
             gui.setItem(22, noPets);
@@ -161,16 +161,16 @@ public class PetsMenuGUI {
 
         // Trier les pets par croissance (décroissant) et filtrer: ne pas montrer ceux déjà équipés
         List<PetData> sortedPets = playerPets.values().stream()
-            .filter(pd -> !pd.equipped)
-            .sorted((a, b) -> Integer.compare(b.growth, a.growth))
-            .collect(Collectors.toList());
+                .filter(pd -> !pd.equipped)
+                .sorted((a, b) -> Integer.compare(b.growth, a.growth))
+                .collect(Collectors.toList());
 
         // Afficher les pets dans la collection (lignes 3-6)
         int[] collectionSlots = {
-            19, 20, 21, 22, 23, 24, 25,
-            28, 29, 30, 31, 32, 33, 34,
-            37, 38, 39, 40, 41, 42, 43,
-            46, 47, 48, 49, 50, 51, 52
+                19, 20, 21, 22, 23, 24, 25,
+                28, 29, 30, 31, 32, 33, 34,
+                37, 38, 39, 40, 41, 42, 43,
+                46, 47, 48, 49, 50, 51, 52
         };
 
         for (int i = 0; i < Math.min(sortedPets.size(), collectionSlots.length); i++) {
@@ -186,14 +186,14 @@ public class PetsMenuGUI {
     private ItemStack createEquippedPetItem(PetDefinition def, PetData petData) {
         ItemStack head = plugin.getPetService().getHeadFor(def);
         ItemMeta meta = head.getItemMeta();
-        
+
         String rarityColor = getRarityColor(def.rarity());
         plugin.getGUIManager().applyName(meta, rarityColor + "✦ " + def.displayName() + " §8(Équipé)");
-        
+
         double totalBonus = def.basePerGrowthPercent() * petData.growth;
         int xpPerLevel = (int) Math.max(1, Math.round(100 * def.rarity().getXpScale()));
         long xpToNext = Math.max(0, xpPerLevel - (petData.xp % xpPerLevel));
-        
+
         List<String> lore = new ArrayList<>();
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
         lore.add("§7Rareté: " + rarityColor + def.rarity().name());
@@ -210,7 +210,7 @@ public class PetsMenuGUI {
         lore.add("");
         lore.add("§c👥 §lÉquipé - Clic pour retirer");
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
-        
+
         plugin.getGUIManager().applyLore(meta, lore);
         // Stocker l'id du pet pour éviter les ambiguïtés (Tarasque vs Tarasque Royale)
         meta.getPersistentDataContainer().set(PET_ID_KEY, PersistentDataType.STRING, def.id());
@@ -221,14 +221,14 @@ public class PetsMenuGUI {
     private ItemStack createCollectionPetItem(PetDefinition def, PetData petData) {
         ItemStack head = plugin.getPetService().getHeadFor(def);
         ItemMeta meta = head.getItemMeta();
-        
+
         String rarityColor = getRarityColor(def.rarity());
         String statusIcon = petData.equipped ? "§a⚡" : "§7◆";
         plugin.getGUIManager().applyName(meta, statusIcon + " " + rarityColor + def.displayName());
-        
+
         double totalBonus = def.basePerGrowthPercent() * petData.growth;
         int xpPerLevel = (int) Math.max(1, Math.round(100 * def.rarity().getXpScale()));
-        
+
         List<String> lore = new ArrayList<>();
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
         lore.add("§7Rareté: " + rarityColor + def.rarity().name());
@@ -240,15 +240,15 @@ public class PetsMenuGUI {
         lore.add("  §7• Croissance: §e" + petData.growth + "§7/§e50");
         lore.add("  §7• XP: §d" + (petData.xp % xpPerLevel) + "§7/§d" + xpPerLevel);
         lore.add("");
-        
+
         if (petData.equipped) {
             lore.add("§a✓ Équipé - §cClic pour retirer");
         } else {
             lore.add("§e✦ Disponible - §aClic pour équiper");
         }
-        
+
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
-        
+
         plugin.getGUIManager().applyLore(meta, lore);
         // Stocker l'id du pet pour éviter les ambiguïtés (Tarasque vs Tarasque Royale)
         meta.getPersistentDataContainer().set(PET_ID_KEY, PersistentDataType.STRING, def.id());
@@ -258,23 +258,23 @@ public class PetsMenuGUI {
 
     private void addSynergiesIfActive(Inventory gui, Player player, Map<String, PetData> playerPets) {
         List<String> activeSynergies = getActiveSynergies(playerPets);
-        
+
         if (!activeSynergies.isEmpty()) {
             // Affichage discret des synergies actives
             ItemStack synergyItem = new ItemStack(Material.NETHER_STAR);
             ItemMeta meta = synergyItem.getItemMeta();
             plugin.getGUIManager().applyName(meta, "§d✨ §lSynergie Active");
-            
+
             List<String> lore = new ArrayList<>();
             lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
             lore.add("§7Vos compagnons travaillent en synergie et vous conferent les bonus suivants:");
             lore.add("");
-            
+
             int totalGrowth = playerPets.values().stream()
-                .filter(pd -> pd.equipped)
-                .mapToInt(pd -> pd.growth)
-                .sum();
-            
+                    .filter(pd -> pd.equipped)
+                    .mapToInt(pd -> pd.growth)
+                    .sum();
+
             for (String synergyKey : activeSynergies) {
                 SynergyInfo info = SYNERGIES.get(synergyKey);
                 if (info != null) {
@@ -285,7 +285,7 @@ public class PetsMenuGUI {
                 }
             }
             lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
-            
+
             plugin.getGUIManager().applyLore(meta, lore);
             synergyItem.setItemMeta(meta);
             gui.setItem(49, synergyItem);
@@ -296,21 +296,21 @@ public class PetsMenuGUI {
         ItemStack stats = new ItemStack(Material.BOOK);
         ItemMeta meta = stats.getItemMeta();
         plugin.getGUIManager().applyName(meta, "§b📊 §lStatistiques");
-        
+
         int totalPets = playerPets.size();
         int equippedPets = (int) playerPets.values().stream().filter(pd -> pd.equipped).count();
         int totalGrowth = playerPets.values().stream().mapToInt(pd -> pd.growth).sum();
         long totalXP = playerPets.values().stream().mapToLong(pd -> pd.xp).sum();
-        
+
         Map<PetRarity, Long> rarityCount = playerPets.values().stream()
-            .collect(Collectors.groupingBy(
-                pd -> {
-                    PetDefinition def = PetRegistry.get(pd.id);
-                    return def != null ? def.rarity() : PetRarity.COMMON;
-                },
-                Collectors.counting()
-            ));
-        
+                .collect(Collectors.groupingBy(
+                        pd -> {
+                            PetDefinition def = PetRegistry.get(pd.id);
+                            return def != null ? def.rarity() : PetRarity.COMMON;
+                        },
+                        Collectors.counting()
+                ));
+
         List<String> lore = new ArrayList<>();
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
         lore.add("§7📈 Vue d'ensemble:");
@@ -325,7 +325,7 @@ public class PetsMenuGUI {
         lore.add("  §d• Épiques: §7" + rarityCount.getOrDefault(PetRarity.EPIC, 0L));
         lore.add("  §6• Mythiques: §7" + rarityCount.getOrDefault(PetRarity.MYTHIC, 0L));
         lore.add("§8▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬");
-        
+
         plugin.getGUIManager().applyLore(meta, lore);
         stats.setItemMeta(meta);
         gui.setItem(53, stats);
@@ -336,22 +336,22 @@ public class PetsMenuGUI {
         ItemStack back = new ItemStack(Material.ARROW);
         ItemMeta backMeta = back.getItemMeta();
         plugin.getGUIManager().applyName(backMeta, "§c← §lRetour");
-        plugin.getGUIManager().applyLore(backMeta, Arrays.asList("§7Retourner au menu principal"));
+        plugin.getGUIManager().applyLore(backMeta, List.of("§7Retourner au menu principal"));
         back.setItemMeta(backMeta);
         gui.setItem(45, back);
-        
+
         // Bouton aide
         ItemStack help = new ItemStack(Material.KNOWLEDGE_BOOK);
         ItemMeta helpMeta = help.getItemMeta();
         plugin.getGUIManager().applyName(helpMeta, "§e❓ §lAide");
         plugin.getGUIManager().applyLore(helpMeta, Arrays.asList(
-            "§7Comment utiliser le système de compagnons:",
-            "§7• Ouvrez des §eboîtes de compagnons §7pour obtenir des compagnons",
-            "§7• Équipez jusqu'à 3 compagnons pour obtenir leurs bonus",
-            "§7• Nourrissez vos compagnons pour augmenter leur XP",
-            "§7• Certaines combinaisons créent des §dsynergies§7 !",
-            "",
-            "§8Les compagnons vous suivent visuellement quand équipés"
+                "§7Comment utiliser le système de compagnons:",
+                "§7• Ouvrez des §eboîtes de compagnons §7pour obtenir des compagnons",
+                "§7• Équipez jusqu'à 3 compagnons pour obtenir leurs bonus",
+                "§7• Nourrissez vos compagnons pour augmenter leur XP",
+                "§7• Certaines combinaisons créent des §dsynergies§7 !",
+                "",
+                "§8Les compagnons vous suivent visuellement quand équipés"
         ));
         help.setItemMeta(helpMeta);
         gui.setItem(53, help);
@@ -359,24 +359,24 @@ public class PetsMenuGUI {
 
     public void handlePetsMenuClick(Player player, int slot, ItemStack item) {
         if (item == null) return;
-        
+
         // Bouton retour
         if (slot == 45 && item.getType() == Material.ARROW) {
             plugin.getMainMenuGUI().openEnchantmentMenu(player);
             player.playSound(player.getLocation(), Sound.UI_BUTTON_CLICK, 0.5f, 1.0f);
             return;
         }
-        
+
         // Clic sur un pet (équipe ou collection) OU application de nourriture glissée depuis l'inventaire
         if (item.getItemMeta() != null && item.getType() == Material.PLAYER_HEAD) {
             // Priorité: lire l'id exact depuis le PDC
             String petId = item.getItemMeta().getPersistentDataContainer().get(PET_ID_KEY, PersistentDataType.STRING);
             if (petId == null && item.getItemMeta().hasDisplayName()) {
                 String displayName = net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer.legacySection()
-                    .serialize(item.getItemMeta().displayName());
+                        .serialize(item.getItemMeta().displayName());
                 petId = extractPetIdFromDisplayName(displayName);
             }
-            
+
             if (petId != null) {
                 // Si le joueur tient dans la souris une nourriture de pet, on l'applique au pet cliqué
                 ItemStack cursor = player.getItemOnCursor();
@@ -405,15 +405,15 @@ public class PetsMenuGUI {
         ItemMeta meta = border.getItemMeta();
         plugin.getGUIManager().applyName(meta, "§6");
         border.setItemMeta(meta);
-        
+
         // Bordures haut et bas
         for (int i = 0; i < 18; i++) {
             gui.setItem(i, border); // Éviter le titre équipe
         }
         for (int i = 45; i < 54; i++) {
-           gui.setItem(i, border); // Éviter les boutons
+            gui.setItem(i, border); // Éviter les boutons
         }
-        
+
         // Bordures côtés
         gui.setItem(26, border);
         gui.setItem(27, border);
@@ -452,9 +452,9 @@ public class PetsMenuGUI {
 
     private List<String> getActiveSynergies(Map<String, PetData> playerPets) {
         List<String> equippedIds = playerPets.values().stream()
-            .filter(pd -> pd.equipped)
-            .map(pd -> pd.id)
-            .collect(Collectors.toList());
+                .filter(pd -> pd.equipped)
+                .map(pd -> pd.id)
+                .collect(Collectors.toList());
 
         if (equippedIds.size() != 3) return new ArrayList<>();
 
@@ -470,10 +470,10 @@ public class PetsMenuGUI {
     private String extractPetIdFromDisplayName(String displayName) {
         if (displayName == null) return null;
         String cleaned = displayName.replaceAll("§[0-9a-fk-or]", "").trim();
-        
+
         // Supprimer les préfixes comme "⚡", "◆", "✦"
         cleaned = cleaned.replaceAll("^[⚡◆✦] ", "");
-        
+
         for (PetDefinition def : PetRegistry.all()) {
             String defCleaned = def.displayName().replaceAll("§[0-9a-fk-or]", "").trim();
             if (cleaned.contains(defCleaned)) {
@@ -488,17 +488,6 @@ public class PetsMenuGUI {
     }
 
     // Classes utilitaires
-    private static class SynergyInfo {
-        final String name;
-        final String displayName;
-        final List<String> requiredPets;
-        final String description;
-
-        SynergyInfo(String name, String displayName, List<String> requiredPets, String description) {
-            this.name = name;
-            this.displayName = displayName;
-            this.requiredPets = requiredPets;
-            this.description = description;
-        }
+        private record SynergyInfo(String name, String displayName, List<String> requiredPets, String description) {
     }
 }
